complete statistic api
